--- a/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
@@ -12,6 +12,7 @@
       - six 
       - wheel
     executable: pip3
+    extra_args: '--target={{ pip3_target_dir }}'
 
 - name: RHEL 7 --> Install remaining TensorFlow requirements
   yum:
